--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -10,8 +10,8 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Network</a>
-          
+            <a class="navbar-brand" href="{% url 'index' %}">Network</a>
+
             <div>
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
@@ -40,7 +40,7 @@
               </ul>
             </div>
           </nav>
-        
+
         <div class="body">
             {% block body %}
             {% endblock %}
