--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -5,7 +5,7 @@
     {% if user.is_authenticated %}
         <div class="border rounded mx-4 mb-2 p-4">
             <h3>New Post</h3>
-            <form action="" method="post">
+            <form action="{% url 'post' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
                     <textarea autofocus class="form-control" name="content" rows="4"></textarea>
@@ -14,11 +14,13 @@
             </form>
         </div>
     {% endif %}
-    <div class="border rounded mx-4 mb-2 p-4">
-        <h3>Post Author</h3>
-        <p>Edit link</p>
-        <p>Content of the post goes here</p>
-        <p>March 18, 2022, 10:23 a.m.</p>
-        <p>🤍/❤️ numOfLikes</p>
-    </div>
+    {% for post in posts %}
+        <div class="border rounded mx-4 mb-2 p-4">
+            <h3><a href="{% url 'profile' post.user.username %}">{{ post.user.username }}</a></h3>
+            <p>Edit link</p>
+            <p>{{ post.content}}</p>
+            <p>{{ post.created }}</p>
+            <p>🤍/❤️ {{ post.likes }}</p>
+        </div>
+    {% endfor %}
 {% endblock %}
