--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -4,11 +4,13 @@
     <h1 class="ml-3">Posts From Your Favs</h1>
     {% for post in posts %}
         <div class="border rounded mx-4 mb-2 p-4">
-            <h3>Post Author</h3>
-            <p>Edit link</p>
-            <p>{{ post }}</p>
-            <p>March 18, 2022, 10:23 a.m.</p>
-            <p>🤍/❤️ numOfLikes</p>
+            <h3><a href="{% url 'profile' post.user.username %}">{{ post.user.username }}</a></h3>
+            {% if post.user == request.user %}
+                <button class="edit btn btn-warning" data-id="{{post.id}}">Edit</button>
+            {% endif %}
+            <p>{{ post.content}}</p>
+            <p>{{ post.created }}</p>
+            <p>🤍/❤️ {{ post.likes }}</p>
         </div>
     {% endfor %}
 {% endblock %}
