--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -45,5 +45,6 @@
             {% block body %}
             {% endblock %}
         </div>
+    <script src="{% static 'network/network.js' %}"></script>
     </body>
 </html>
