--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -1,17 +1,27 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    <h1 class="ml-3">{{ name | capfirst }}'s Profile</h1>
-    <h3 class="ml-3">Following - 10</h3>
-    <h3 class="ml-3">Followers - 4</h3>
-    <h3 class="ml-3">Posts</h3>
-    {% for post in posts %}
-        <div class="border rounded mx-4 mb-2 p-4">
-            <h3>Post Author</h3>
-            <p>Edit link</p>
-            <p>{{ post }}</p>
-            <p>March 18, 2022, 10:23 a.m.</p>
-            <p>🤍/❤️ numOfLikes</p>
-        </div>
-    {% endfor %}
+    {% if not profileOwner %}
+        <h2 class="ml-3">User does not exist</h2>
+    {% else %}
+        <h1 class="ml-3">{{ profileOwner.username | capfirst }}'s Profile</h1>
+        {% if user.is_authenticated and currentUser == False %}
+            <button id="follow" class="ml-5 btn btn-success">Follow</button>
+            <button id ="unfollow" class="ml-5 btn btn-danger">Unfollow</button>
+        {% endif %}
+        <h3 class="ml-3">Following - {{ profileOwner.following.count }}</h3>
+        <h3 class="ml-3">Followers - {{ profileOwner.followers.count }}</h3>
+        <h3 class="ml-3">Posts</h3>
+        {% for post in posts %}
+            <div class="border rounded mx-4 mb-2 p-4">
+                <h3>{{ post.user.username }}</h3>
+                {% if currentUser == True %}
+                    <button class="edit btn btn-warning" data-id="{{post.id}}">Edit</button>
+                {% endif %}
+                <p>{{ post.content }}</p>
+                <p>{{ post.created }}</p>
+                <p>🤍/❤️ {{ post.likes}}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
