--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -18,9 +18,17 @@
         <div class="border rounded mx-4 mb-2 p-4">
             <h3><a href="{% url 'profile' post.user.username %}">{{ post.user.username }}</a></h3>
             {% if post.user == request.user %}
-                <button class="edit btn btn-warning" data-id="{{post.id}}">Edit</button>
+                <button class="edit btn btn-warning" data-id="{{ post.id }}">Edit</button>
             {% endif %}
-            <p>{{ post.content}}</p>
+            <p data-content="{{ post.id }}">{{ post.content}}</p>
+            <form hidden class="mt-3" data-update="{{ post.id }}" data-page="index" action="" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <textarea autofocus class="form-control" name="content" rows="4">{{ post.content }}
+                    </textarea>
+                </div>
+                <input data-save="{{ post.id }}" class="btn btn-success" type="submit" value="Save">
+            </form>
             <p>{{ post.created }}</p>
             <p>🤍/❤️ {{ post.likes }}</p>
         </div>
