--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -21,7 +21,15 @@
                 {% if currentUser == True %}
                     <button class="edit btn btn-warning" data-id="{{post.id}}">Edit</button>
                 {% endif %}
-                <p>{{ post.content }}</p>
+                <p data-content="{{ post.id }}">{{ post.content}}</p>
+                <form hidden class="mt-3" data-update="{{ post.id }}" data-page="profile" action="" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <textarea autofocus class="form-control" name="content" rows="4">{{ post.content }}
+                        </textarea>
+                    </div>
+                    <input data-save="{{ post.id }}" class="btn btn-success" type="submit" value="Save">
+                </form>
                 <p>{{ post.created }}</p>
                 <p>🤍/❤️ {{ post.likes}}</p>
             </div>
