--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -21,10 +21,10 @@
                 <button class="edit btn btn-warning" data-id="{{ post.id }}">Edit</button>
             {% endif %}
             <p data-content="{{ post.id }}">{{ post.content}}</p>
-            <form hidden class="mt-3" data-update="{{ post.id }}" data-page="index" action="" method="post">
+            <form hidden class="mt-3" data-update="{{ post.id }}" action="{% url 'update' user_id=post.user.id post_id=post.id page='index' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <textarea autofocus class="form-control" name="content" rows="4">{{ post.content }}
+                    <textarea data-textarea="{{ post.id }}" class="form-control" name="content" rows="4">{{ post.content }}
                     </textarea>
                 </div>
                 <input data-save="{{ post.id }}" class="btn btn-success" type="submit" value="Save">
