--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -7,7 +7,11 @@
             <h3><a href="{% url 'profile' post.user.username %}">{{ post.user.username }}</a></h3>
             <p>{{ post.content}}</p>
             <p>{{ post.created }}</p>
-            <p>🤍/❤️ {{ post.likes }}</p>
+            {% if user in post.user_likes.all %}
+                <p><span class="btn dislike" data-like="{{ post.id }}">❤️</span><span data-count="{{ post.id }}">{{ post.likes }}</span></p>
+            {% else %}
+                <p><span class="btn like" data-like="{{ post.id }}">🤍</span><span data-count="{{ post.id }}">{{ post.likes }}</span></p>
+            {% endif %}
         </div>
     {% empty %}
         <h6>The users you follow have not made any posts yet</h6>
