updated empty following page message

--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -14,6 +14,6 @@
             {% endif %}
         </div>
     {% empty %}
-        <h6>The users you follow have not made any posts yet</h6>
+        <h6 class="mt-3 ml-5">You are either not following any users, or the ones you are following have not yet posted. Please check back later!</h6>
     {% endfor %}
 {% endblock %}
