--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -15,7 +15,7 @@
         <h3 class="ml-3">Following - {{ profileOwner.followers.count }}</h3>
         <h3 class="ml-3">Followers - {{ profileOwner.following.count }}</h3>
         <h3 class="ml-3">Posts</h3>
-        {% for post in posts %}
+        {% for post in page_obj %}
             <div class="border rounded mx-4 mb-2 p-4">
                 <h3>{{ post.user.username }}</h3>
                 {% if currentUser == True %}
@@ -38,5 +38,22 @@
                 {% endif %}
             </div>
         {% endfor %}
+        <div class="pagination my-4 d-flex justify-content-center">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; First</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">Next</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
     {% endif %}
 {% endblock %}
